--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Responsive Personal Portfolio vCard Template">
-    <meta property="og:title" content="Chandra Shekhar Website">
+    <meta property="og:title" content="Santosh Kumar Website">
     <meta property="og:image" content="assets/images/profile-photo.jpg">
     <meta property="og:description" content="Online Resume">
     
    
-    <title>CHANDRA SHEKHAR</title>
+    <title>Santosh Kumar</title>
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500,700' rel='stylesheet' type='text/css'>
     <link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
     <link href="assets/css/font-awesome.min.css" rel="stylesheet" media="screen">
@@ -40,7 +40,7 @@
 
 <section id="home" class="tt-fullHeight" data-stellar-vertical-offset="50" data-stellar-background-ratio="0.2">
     <div class="intro">
-        <div class="intro-sub">CHANDRA SHEKHAR</div>
+        <div class="intro-sub">Santosh Kumar</div>
         <h1> <span>Software Engineer</span></h1>
         <p>Enthusiastic engineering leader with 3+ years’ experience participating in the complete product development lifecycle of successfully launched systems used by customers worldwide. Adhered to high quality development standards while delivering technical solutions to complex problems.<br></p>
         <div class="social-icons">
@@ -95,7 +95,7 @@
                         <img src="assets/images/profile-photo.jpg" alt="">
                     </div>
                     <ul>
-                        <li><strong>Name:</strong> CHANDRA SHEKHAR</li>
+                        <li><strong>Name:</strong> Santosh Kumar</li>
                         <li><strong>Nationality:</strong> Indian</li>
                         <li><strong>Phone:</strong> +91-7903861793</li>
                         <li><strong>Email:</strong> csk.111165@gmail.com</li>
