change his education

--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
                     <ul>
                         <li><strong>Name:</strong> Santosh Kumar</li>
                         <li><strong>Nationality:</strong> Indian</li>
-                        <li><strong>Phone:</strong> +91-7903861793</li>
-                        <li><strong>Email:</strong> csk.111165@gmail.com</li>
+                        <li><strong>Phone:</strong> +91-8789496674</li>
+                        <li><strong>Email:</strong> santosh33.1165@gmail.com</li>
                     </ul>
                 </div>
             </div>
@@ -131,18 +131,18 @@
                     <ul class="timeline">
                         <li>
                             <div class="posted-date">
-                                <span class="month">2012-2016</span>
+                                <span class="month">2013-2017</span>
                             </div><!-- /posted-date -->
 
                             <div class="timeline-panel wow fadeInUp">
                                 <div class="timeline-content">
                                     <div class="timeline-heading">
                                         <h3>B.Tech</h3>
-                                        <span>BITS, Dhanbad,India</span>
+                                        <span>BIET, Bhadraka,India</span>
                                     </div><!-- /timeline-heading -->
 
                                     <div class="timeline-body">
-                                        <p>Bachelor of Technology in the branch of Computer Science</br>CGPA:7.94/10</p>
+                                        <p>Bachelor of Technology in the branch of Mechanical Engineering</br>CGPA:7.94/10</p>
                                     </div><!-- /timeline-body -->
                                 </div> <!-- /timeline-content -->
                             </div><!-- /timeline-panel -->
